# simulator

./: .gitignore  env.sh
common/include/: robot_msg.h  voice.h
common/include/mars_message/: AlarmInfo.hpp  AppCarpet.hpp  AppCleanInfo.hpp  AppCleanRecord.hpp  AppLocalAlert.hpp  AppMap.hpp  AppMisc.hpp  AppNotDisturbTime.hpp  AppPartitionDivision.hpp  AppPartitionMerge.hpp  AppPartsLife.hpp  AppPath.hpp  AppRestrictedArea.hpp  AppRoomClean.hpp  AppRoomProperties.hpp  AppSetCleaningSequence.hpp  AppSetRoomName.hpp  AppSetRoomProperties.hpp  AppSpotClean.hpp  AppVirtualWall.hpp  AppZoneClean.hpp  BlueToothInfo.hpp  BlueToothState.hpp  Bumper.hpp  ClearComponent.hpp  Coder.hpp  ColorRGBA.hpp  Debug.hpp  DevicePower.hpp  DoorInfo.hpp  Event.hpp  FactoryTestConfig.hpp  FusionPose.hpp  GridMap.hpp  IO.hpp  Imu.hpp  IrCode.hpp  IrCode2.hpp  LaserScan.hpp  MacAddrCode.hpp  (+28 more)
common/lib/: liblcm.so.1.4.0
common/lib/pkgconfig/: lcm.pc
lcmd/: CMakeLists.txt
lcmd/python/: lcmd.py
lcmd/src/: lcmd.cpp
lcmd/src/utils/: angular.h  linux_serial.h  log_.h
release/app/: voice
release/app/configuration_files/: mapping_imu.lua  pose_graph.lua  trajectory_builder_2d.lua
rosws/: launch.sh  test_room.sh
rosws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
rosws/devel/lib/pkgconfig/: bridge.pc  c1_description.pc  c1_gazebo.pc  lcm2ros.pc  lcm_tunnel.pc  ros2lcm.pc
rosws/src/c1_description/: CMakeLists.txt  package.xml
rosws/src/c1_description/launch/: display.launch  (+5 more)
rosws/src/c1_gazebo/: CMakeLists.txt  package.xml
scripts/: robot.sh
(+27 files in other folders)
